--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # Core Python Dependencies
-numpy==1.22.0
-pandas==1.4.1
-scikit-learn==1.0.2
-tensorflow==2.8.0
-torch==1.10.2
-transformers==4.16.2
-nltk==3.7
+numpy>=1.25.0
+pandas>=1.5.0
+scikit-learn>=1.2.0
+tensorflow>=2.14.0
+torch>=2.0.0
+transformers>=4.25.0
+nltk>=3.8.1
 
 # Web Frameworks
-fastapi==0.75.0
-uvicorn==0.17.6
+fastapi>=0.96.0
+uvicorn>=0.22.0
 
 # Database
-pymongo==4.3.3
+pymongo>=4.3.3
 
 # Machine Learning
-scipy==1.8.0
-keras==2.8.0
+scipy>=1.10.0
+keras>=2.14.0
